// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Commit component correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "flex": 1,
      "justifyContent": "center",
      "marginLeft": 10,
      "marginRight": 10,
      "marginTop": 5,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "http://placehold.it/25/25",
        }
      }
      style={
        Object {
          "borderRadius": 13,
          "height": 25,
          "width": 25,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "alignSelf": "center",
          "fontWeight": "bold",
          "paddingLeft": 10,
        }
      }
    >
      sriraman
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
     
    Abc
     
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#ccc",
      }
    }
  >
     
    a few seconds ago
     
  </Text>
</View>
`;

exports[`render Commit component correctly even without author data 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "flex": 1,
      "justifyContent": "center",
      "marginLeft": 10,
      "marginRight": 10,
      "marginTop": 5,
      "padding": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
     
    Abc
     
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#ccc",
      }
    }
  >
     
    a few seconds ago
     
  </Text>
</View>
`;
